samples/errors/module-error.pad
{@
    import "samples/errors/module.pad" as mod
    mod.func()
@}